# disc-golf-api

./: .gitignore  docker-compose.yml
server/: Cargo.toml  Dockerfile  Rocket.toml
server/migrations/2019-12-30-203502_create_users/: up.sql
server/src/: db.rs  main.rs  schema.rs
server/src/graphql/: mod.rs  models.rs  resolvers.rs  schema.rs
