[package]
name = "server"
version = "0.1.0"
authors = ["Jake Goldsborough <jake.goldsborough@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = "1.3"
juniper = "0.14.1"
juniper_rocket = "0.5.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "uuid"]

[dependencies.uuid]
version = "0.4"
features = ["serde", "v4"]
